[tool.poetry]
name = "certbrother"
version = "0.2.0"
description = ""
authors = [
    "James Hodgkinson <james@terminaloutcomes.com>",
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.5"
urllib3 = "^2.6.3"
requests-html = "^0.10.0"
loguru = "^0.7.3"
click = "^8.3.1"
pydantic-settings = "^2.12.0"

[tool.poetry.dependencies.pydantic]
extras = [
    "dotenv",
]
version = "^2.12"

[tool.poetry.group.dev.dependencies]
ruff = "^0.15.0"
mypy = "^1.19.1"
pytest = "^9.0.2"
black = "^26.1.0"
types-urllib3 = "^1.26.25.14"
types-requests = "^2.32.4.20260107"

[tool.poetry.scripts]
certbrother = "certbrother:main"

[tool.ruff]
line-length = 200

[tool.mypy]
plugins = "pydantic.mypy"

[build-system]
requires = [
    "poetry-core",
]
build-backend = "poetry.core.masonry.api"

[project]
name = "certbrother"
description = ""
version = "0.2.0"
readme = "README.md"
authors = [
    { name = "James Hodgkinson", email = "james@terminaloutcomes.com" },
]
