[project]
name = "certbrother"
version = "0.2.0"
description = "Certificate manager utility for Brother devices."
readme = "README.md"
authors = [{ name = "James Hodgkinson", email = "james@terminaloutcomes.com" }]
requires-python = ">=3.13"
dependencies = [
    "click>=8.3.2,<9.0.0",
    "loguru>=0.7.3,<0.8.0",
    "lxml-html-clean>=0.4.4,<0.5.0",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "python-dotenv>=1.2.2,<2.0.0",
    "requests>=2.33.1,<3.0.0",
    "requests-html>=0.10.0,<0.11.0",
    "urllib3>=2.6.3",
]

[project.scripts]
certbrother = "certbrother:main"

[dependency-groups]
dev = [
    "black>=26.3.1,<27.0.0",
    "pytest>=9.0.3,<10.0.0",
    "ruff>=0.15.11,<0.16.0",
    "ty>=0.0.31,<0.0.32",
    "types-requests>=2.31.0.6,<3.0.0.0",
    "types-urllib3>=1.26.25.14,<2.0.0.0",
]

[tool.ruff]
line-length = 200

[tool.setuptools]
py-modules = ["certbrother"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
